public/app/css/style.css
.header {
top: 0;
width: 100%;
padding: 20px 0 10px;
background: #fafafa;
border-bottom: 5px solid #e6e6e6;
text-align: center;
z-index: 2;
}

.header-title {
margin: 0;
font-size: 2.5em;
font-weight: normal;
}

.search {
  margin: 20px auto;
}

.ng-dirty.ng-invalid input:focus{
  border-color: #e7352c;
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(253, 90, 82, 0.6);
}

.warning {
  color: #FD382E;
  font-weight: 800;
}

#player_result_list_container ul{
  margin: 0;
  padding: 10px 0;
  text-align: justify;
  list-style-type: none;
}

#player_result_list_container ul li{
  font-size: 1em;
  cursor: pointer;
}
#player_result_list_container ul li:hover {
  box-shadow: 0 0 2px rgba(100, 100, 100, 0.4);
}


#player_result_list_container ul li span{
  font-size: 0.8em;
  color: rgba(21, 21, 21, 0.6);
}

.svgWrapper .btn-group{
  /*align: center;*/
}

.blink_me {
  -webkit-animation-name: blinker;
  -webkit-animation-duration: 1s;
  -webkit-animation-timing-function: linear;
  -webkit-animation-iteration-count: infinite;
  
  -moz-animation-name: blinker;
  -moz-animation-duration: 1s;
  -moz-animation-timing-function: linear;
  -moz-animation-iteration-count: infinite;
  
  animation-name: blinker;
  animation-duration: 1s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
}

@-moz-keyframes blinker {  
  0% { opacity: 1.0; }
  50% { opacity: 0.0; }
  100% { opacity: 1.0; }
}

@-webkit-keyframes blinker {  
  0% { opacity: 1.0; }
  50% { opacity: 0.0; }
  100% { opacity: 1.0; }
}

@keyframes blinker {  
  0% { opacity: 1.0; }
  50% { opacity: 0.0; }
  100% { opacity: 1.0; }
}

